--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'io.reactivex:rxjava:1.1.6'
-    compile("com.fasterxml.jackson.core:jackson-databind")
-    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.2.1'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
