--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.2.1'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+    compile group: 'io.reactivex', name: 'rxjava-async-util', version: '0.21.0'
 }
